--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Pacman Clone</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <!-- gird to be populated in javascript -->
+  <div class="grid"></div>
 </body>
 </html>
