--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
   <body>
     <!-- gird to be populated in javascript -->
+    <div class="splash">
+      <h1>Pac-Man</h1>
+      <h2>Press Enter</h2>
+    </div>
     <div class="grid"></div>
   </body>
 </html>
