--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       <h1>Pac-Man</h1>
       <h2>Press Enter</h2>
     </div>
+    <div class="gameover">
+      <h1>Game Over</h1>
+      <h2>press enter to start again</h2>
+    </div>
+    <div class="win">
+      <h1>You Won</h1>
+      <h2>Play Again? press enter</h2>
+    </div>
     <div class="grid"></div>
   </body>
 </html>
