--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <h1>You Won</h1>
       <h2>Play Again? press enter</h2>
     </div>
+    <div class="mainUI">
+        <h1>Pac-Man</h1>
+        <h2>level: 1</h2>
+        <h2>score: <span class="score"></span></h2>
+    </div>
     <div class="grid"></div>
   </body>
 </html>
