add difficulty levels

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <title>Pacman Clone</title>
 </head>
   <body>
-    <!-- gird to be populated in javascript -->
     <div class="splash">
       <h1>Pac-Man</h1>
       <h2>Press Enter</h2>
@@ -24,9 +23,11 @@
     </div>
     <div class="mainUI">
         <h1>Pac-Man</h1>
-        <h2>level: 1</h2>
+        <h2>level: <span class="levelDisplay"></span></h2>
         <h2>score: <span class="score"></span></h2>
     </div>
-    <div class="grid"></div>
+    <div class="grid">
+      <img class="pacgif" src="./assets/cropped-pacman.gif" alt="">
+    </div>
   </body>
 </html>
